# fastapi-load-testing

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.agents/: agents.md
.github/workflows/: compose-watch.yml
app/: main.py
app/api/: router.py  system.py  tutorials_async.py  tutorials_celery_redis.py
app/core/: celery_app.py  config.py  logging.py  tutorial_runtime.py
app/tasks/: __init__.py  jobs.py  periodic.py  pipelines.py
app/workers/: __init__.py  celery_beat.py  celery_worker.py
docs/: 00-asyncio-sequence-diagrams.md  02-experiment-cpu-inline-vs-to-thread.md  04-producer-consumer-pattern.md  asyncio-leveling-rubric.md  celery-redis-design-decisions.md  celery-redis-leveling-rubric.md  frontier-ai-lab-application-examples.md  lifetime_vs_depinject.md
docs/tutorials/: 00-asyncio-sequence-diagrams.md  01-experiment-sleep-blocking-vs-async.md  03-experiment-fanout-sequential-vs-gather.md  04-experiment-timeout-and-cancellation.md  05-experiment-bounded-resource-semaphore.md  06-experiment-producer-consumer-asyncio-queue.md  07-experiment-gather-vs-taskgroup-failure-propagation.md  07-experiment-timeout-and-cancellation.md  08-experiment-gather-vs-taskgroup-failure-propagation.md
docs/tutorials/async/: 00-asyncio-sequence-diagrams.md  01-experiment-sleep-blocking-vs-async.md  02-experiment-cpu-inline-vs-to-thread.md  03-experiment-fanout-sequential-vs-gather.md  04-experiment-timeout-and-cancellation.md  (+4 more)
loadtest/: Dockerfile  locustfile.py
scripts/: compose_watch_smoke.sh
tests/: conftest.py  test_api.py  test_sleep_endpoints.py
(+22 files in other folders)
