 [project]
 name = "fastapi-load-testing"
 version = "0.1.0"
 description = "Bare-minimum FastAPI + Locust scaffolding (uv + Docker)."
 readme = "README.md"
 requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic-settings>=2.6",
  "python-dotenv>=1.0",
  "celery[redis]>=5.4",
  # Included for your later endpoint experiments (not implemented here).
  "httpx>=0.27",
  "requests>=2.32",
   # Load testing
   "locust>=2.31",
   # Optional (multi-worker) runtime, kept available for later.
   "gunicorn>=23.0",
 ]

[tool.uv]
dev-dependencies = [
  "pytest>=9.0",
]
